Fix for incorrect alignment of third level flyouts in standard mode

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -10,6 +10,9 @@
             &.g-active {
                 top: auto;
             }
+            .g-dropdown {
+            	top: 0;
+            }
         }
     }
 
